<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Galaxy S II Settings</string>

    <string name="screen_colors_title">Colors</string>
    <string name="category_mdnie_title">Screen</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_negative_title_head">Negative Mode</string>
    <string name="mdnie_negative_summary_head">Enable/Disable inverted colors</string>
    <string name="mdnie_outdoor_title_head">Outdoor Mode</string>
    <string name="mdnie_outdoor_summary_head">Enable/Disable outdoor mode</string>
    <string name="panel_gamma_title_head">Screen Gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>

    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    
    <string name="category_sensors_title">Sensors</string>
    <string name="gyro_subcat_title">Gyroscope</string>
    <string name="use_gyro_calibration_title_head">Use calibration data</string>
    <string name="use_gyro_calibration_summary_head">Use the gyroscope calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_gyro_title_head">Calibrate</string>
    <string name="calibrate_gyro_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
    <string name="touchkey_subcat_title">Touch key</string>
    <string name="touchkey_light_title_head">Enable keys backlight</string>
    <string name="touchkey_light_summary_head">Light up touch keys when screen is on</string> 

	<string name="category_backlight_title">BackLights</string>
	<string name="backlight_subcat_title">Back Light</string>
    <string name="backlight_timeout_title_head">Backlight Timeout</string>
    <string name="backlight_timeout_summary_head">Adjust the delay before the touch key backlight automatically turns off</string>
	<string name="bln_light_title_head">BLN Light</string>
    <string name="bln_light_summary_head">Turn BLN On/off</string>
	<string name="bln_timeout_title_head">BLN Timeout</string>
    <string name="bln_timeout_summary_head">Adjust the delay before BLN turns off</string>
	<string name="bln_breathe_title_head">BLN Breathe</string>
    <string name="bln_breathe_summary_head">Turn BLN Breathing On/off</string>
	<string name="bln_blink_title_head">BLN Blink</string>
    <string name="bln_blink_summary_head">Turn BLN Blink On/off</string>
	<string name="bln_fade_title_head">BLN fade</string>
    <string name="bln_fade_summary_head">Turn BLN fade On/off</string>
	<string name="bln_battery_limit_title_head">BLN Battery Limit</string>
    <string name="bln_battery_limit_summary_head">Set the value below which BLN tunrs off</string>
	<string name="bln_enable_charging_title_head">BLN Enabled Charging</string>
    <string name="bln_enable_charging_summary_head">Turn BLN On/off during charging</string>

	<string name="category_haptic_title">Haptic</string>
    <string name="vibrator_subcat_title">Vibrator</string>
    <string name="vibrator_intensity_title_head">Vibrator Intensity</string>
    <string name="vibrator_intensity_summary_head">Set vibrator intensity</string>

    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>
</resources>
