<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
    	android:title="@string/backlight_subcat_title">
    <com.cyanogenmod.settings.device.TouchKeyBacklightTimeout 
	        android:key="backlight_timeout"
	        android:title="@string/backlight_timeout_title_head"
	        android:summary="@string/backlight_timeout_summary_head"
	        android:entries="@array/backlight_timeout_entries"
  			android:entryValues="@array/backlight_timeout_entries_values"
  			android:defaultValue="1600" />

	 <CheckBoxPreference
                android:key="bln_light"
                android:title="@string/bln_light_title_head"
                android:summary="@string/bln_light_summary_head"
                />

	<com.cyanogenmod.settings.device.BLNTimeout 
	        android:key="bln_timeout"
	        android:title="@string/bln_timeout_title_head"
	        android:summary="@string/bln_timeout_summary_head"
	        android:entries="@array/bln_timeout_entries"
  			android:entryValues="@array/bln_timeout_entries_values"
  			android:defaultValue="60000" />
	<CheckBoxPreference
                android:key="bln_breathe"
                android:title="@string/bln_breathe_title_head"
                android:summary="@string/bln_breathe_summary_head"
                />
	<CheckBoxPreference
                android:key="bln_blink"
                android:title="@string/bln_blink_title_head"
                android:summary="@string/bln_blink_summary_head"
                />
	<CheckBoxPreference
                android:key="bln_fade"
                android:title="@string/bln_fade_title_head"
                android:summary="@string/bln_fade_summary_head"
                />
	<com.cyanogenmod.settings.device.BLNBatteryLimit 
	        android:key="bln_battery_limit"
	        android:title="@string/bln_battery_limit_title_head"
	        android:summary="@string/bln_battery_limit_summary_head"
	        android:entries="@array/bln_battery_limit_entries"
  			android:entryValues="@array/bln_battery_limit_entries_values"
  			android:defaultValue="20" />
	<CheckBoxPreference
                android:key="bln_enable_charging"
                android:title="@string/bln_enable_charging_title_head"
                android:summary="@string/bln_enable_charging_summary_head"
                />

   
	</PreferenceCategory>
</PreferenceScreen>

